# infranode

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/workflows/: mirror.yml
deploy/: Caddyfile  Caddyfile.prod  Dockerfile.caddy  Dockerfile.mcp  cloudflare_protect.sh  docker-compose.yml  harden_firewall.sh
docs/: mcp-install.md  openapi.yaml
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/public/: robots.txt
docs-site/scripts/: make-og-image.mjs
docs-site/src/: content.config.ts
docs-site/src/components/: CodeTabs.astro  JsonLd.astro  PageActions.astro  Search.astro  SeoHead.astro  TryIt.astro
docs-site/src/data/: cities.json  coverage.json  endpoint-categories.ts  mcp-topics.ts  topics.ts
docs-site/src/layouts/: Docs.astro
docs-site/src/lib/: cities.ts  codegen.ts  openapi.ts
docs-site/src/pages/: 404.astro  abdeckung.astro  datenschutz.astro  impressum.astro  index.astro  llms-full.txt.ts  llms.txt.ts  mcp.astro  openapi.json.ts  openapi.yaml.ts  quickstart.astro  staedte.astro  ueber.astro
docs-site/src/pages/api/: [slug].astro  [slug].md.ts
docs-site/src/pages/daten/: [topic].astro  index.astro
docs-site/src/pages/en/: about.astro  cities.astro  coverage.astro  imprint.astro  index.astro  mcp.astro  privacy.astro  quickstart.astro
docs-site/src/pages/mcp/: [topic].astro
docs-site/src/pages/staedte/: [slug].astro
docs-site/src/pages/tutorials/: bahnhof-abfahrten.astro  home-assistant-stadtdaten.astro  index.astro  javascript-sdk.astro  mcp-server-claude-einrichten.astro  python-pandas-stadtdaten.astro  python-sdk.astro  was-ist-ein-mcp-server.astro
docs-site/src/styles/: global.css
src/infranode/: __init__.py  __main__.py  config.py  logging.py  main.py
src/infranode/adapters/: __init__.py  autobahn.py  baumkataster.py  berlin_radzaehl.py  berlin_viz.py  boris.py  db_fasta.py  db_timetables.py  denkmal.py  destination_one.py  divi_live.py  dortmund_parking.py  dwd.py  dwd_fire.py  dwd_pollen.py  dwd_warnings.py  eea_bathing.py  gbfs.py  genesis.py  gtfs_rt.py  hamburg_radzaehl.py  hamburg_transparenz.py  hamburg_verkehrslage.py  hvv_geofox.py  klinik_atlas.py  koeln_arcgis.py  koeln_events.py  leipzig_radzaehl.py  lhp.py  mobidata_bw.py  mobilithek_afir.py  mobilithek_datex2.py  mobilithek_datex3.py  muenchen_opendata.py  muenchen_radzaehl.py  oeffentlichevergabe.py  openaq.py  overpass.py  parkendd.py  pegelonline.py  (+9 more)
src/infranode/api/: __init__.py  deps.py  errors.py  responses.py
src/infranode/api/v1/: __init__.py  abuse_guard.py  cities.py  compare.py  dcat.py  dcat_datasets.json  health.py  live.py  openapi.py  pagination.py  ratelimit.py  sources.py  stations.py  track.py
src/infranode/archive/: __init__.py  bka_pks_db.py  boris_db.py  inkar_db.py  kba_db.py  mastr_db.py  regionalstatistik_db.py  store.py  tender_db.py  transit_store.py  unfallatlas_db.py
src/infranode/infra/: __init__.py  cache.py  etag.py  http.py  metrics.py  mobilithek.py  redis.py  seeds.py
src/infranode/ingest/: __init__.py  delfi.py  gtfs.py
src/infranode/mcp/: __init__.py  client.py  ratelimit.py  schemas.py  server.py  tools.py
src/infranode/normalization/: __init__.py  enums.py  models.py  payloads.py  tender_match.py
src/infranode/registry/: __init__.py  catalog.py  cities.py  coverage.py  models.py  source_specs.py
src/infranode/resilience/: __init__.py  breaker.py  breaker_redis.py  client.py  types.py
src/infranode/static/: admin.css
src/infranode/transit/: __init__.py  interpolation.py  poller.py  refresh.py  resolver.py  store.py
(+77 files in other folders)
