[project]
name = "infranode"
version = "1.0.0"
description = "InfraNode API: quelloffene Proxy-REST-API fuer offene Daten deutscher Staedte"
authors = [
    { name = "street1983nk", email = "street1983nk@users.noreply.github.com" }
]
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id==5.0.0",
    "cryptography==48.0.0",
    "fastapi==0.136.3",
    "gtfs-realtime-bindings==2.0.0",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "limits==5.8.0",
    "orjson==3.11.9",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.32",
    "redis==8.0.0",
    "slowapi==0.1.9",
    "structlog==26.1.0",
    # tzdata: IANA-Zeitzonen fuer zoneinfo (DATA-34 DB-Timetables nutzt
    # Europe/Berlin fuer die lokale Bahnhofs-Stunde). Auf Linux-Docker oft via
    # System-tz vorhanden, auf Windows/slim-Images aber NICHT -> explizit pinnen,
    # damit ZoneInfo("Europe/Berlin") ueberall (Tests + Prod) aufloest.
    "tzdata==2026.1",
    "uvicorn[standard]==0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

# Es werden zwei Top-Level-Pakete unter src/ mitgebaut: das interne Paket sowie
# der oeffentliche Alias-Namespace "infranode" (z.B. python -m infranode.mcp).
# uv_build baut sonst nur das nach [project].name benannte Paket; die explizite
# Liste nimmt den Alias hinzu.
[tool.uv.build-backend]
module-name = ["infranode", "infranode"]
module-root = "src"

[dependency-groups]
dev = [
    "fakeredis==2.36.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "respx==0.23.1",
    "ruff==0.15.16",
]
# Optionale Batch-Verarbeitungs-Schicht (D-01 pyarrow + D-17 h3).
# Eigene Gruppe, NIE in [project] dependencies: beide duerfen nicht ins
# Live-Docker-Image (Image-Size/Memory auf CAX11, ARM/4 GB, Pitfall 1). Nur vom
# Offline-Batch-Kommando importiert, nie vom Request-Hotpath.
# MCP-Server-Schicht (offizielles MCP Python SDK inkl. gebuendeltem FastMCP,
# Owner-Entscheid A1 gegen standalone fastmcp). Eigene Gruppe, NIE in [project]
# dependencies: darf nicht ins Live-Docker-Image (T-12-MCP-IMG, Pitfall 2). httpx
# ist bereits Live-Dependency und wird hier NICHT erneut aufgenommen.
mcp = [
    "mcp[cli]==1.27.2",
]
# BORIS-Shapefile-Ingest (DATA-35): Laender ohne offenen WFS (NW/ST) liefern die
# Bodenrichtwerte nur als Shapefile-Download. pyshp (pure-python, .shp/.dbf) NUR
# fuer den Offline-Bulk-Ingest, NIE im Live-Docker-Image/Request-Pfad (Pitfall 1).
ingest = [
    "pyshp==2.3.1",
]
# Optionale Daten-Explorer-Schicht (DuckDB-Query gegen lokale JSONL-Daten, OPS-09).
# Eigene Gruppe, NIE in [project] dependencies: duckdb darf nicht ins Live-Docker-
# Image (Image-Size/Memory auf CAX11, ARM/4 GB, nicht im Request-Hotpath, Pitfall 1).
# Nur lazy im Admin-Explorer-Pfad importiert, nie vom Public-API-Request. Version
# 1.5.x ZWINGEND: die 1.4-LTS hat keine Linux-ARM64-Wheels auf PyPI (RESEARCH
# Pitfall 7); 1.5.3 exakt gepinnt, ARM64-Wheel auf der Box verifiziert.
explorer = [
    "duckdb==1.5.3",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# scripts/ = einmalige Betriebs-/Ops-Helfer (Kuma-Setup, Deploy, Export-Gate),
# keine ausgelieferte Library. Lange Zeilen (URLs, Shell-Befehle, Regex) sind hier
# akzeptabel -> E501 ignorieren; alle uebrigen Regeln (F/B/I/S) bleiben aktiv,
# damit echte Bugs (unbenutzte Importe, zip-strict) weiter gefangen werden.
"scripts/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
